--- a/src/app/view/pages/page-home/home.component.html
+++ b/src/app/view/pages/page-home/home.component.html
@@ -30,7 +30,7 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div class="project-text">
                     <div>
                         <h4>Brief Project Description</h4>
                         <p>Sigmund Gossembrot (1417–1493) is considered a representative patron of Early Renaissance Humanism in the German-speaking southwest. After studying the artes in Vienna (1433–1436: degree of baccalaureus), he pursued a successful career in his hometown of Augsburg before withdrawing to the Strasbourg convent of ‘Grüner Wörth’ in 1461 to dedicate himself to intensive study of the privately owned books he brought with him. Today, there are still around 40 manuscripts predominantly preserved at European archives that testify to Gossembrot’s extensive book collection. Numerous notes and cross-references that Gossembrot included in his codices indicate that the collection once contained at least 100 more manuscripts and about half a dozen incunabula (as of December 2021). The extensive private library included not only ancient and late ancient literature but also medieval theological, philosophical, and historiographical writings, works of early science, poetry, and poetics, as well as humanistic literature and letters. The latter reflect Gossembrot’s social environment in Vienna, Swabia, Franconia, and the Upper Rhine region. The notes preserved in the manuscripts provide insights into Gossembrot’s contacts with contemporaries such as Konrad Säldner or Sigismund Meisterlin. They enable the reconstruction of an interpersonal and interinstitutional network through which Gossembrot participated in the intellectual discourses of his time, extending to his late years in Strasbourg..
