--- a/src/app/view/shared/incoming-verweise-list/incoming-verweise-list.component.html
+++ b/src/app/view/shared/incoming-verweise-list/incoming-verweise-list.component.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 </div>
-<div class="quell-verweise-container" *ngIf="infoCarrier && !infoCarrier.has_incoming_verweis">
+<div class="quell-verweise-container" *ngIf="infoCarrier && !infoCarrier.hasIncomingVerweis">
     <div class="quell-verweise-header">
         <h3>Es sind keine Verweise auf diesen Textträger bekannt.</h3>
     </div>
