--- a/src/app/view/pages/page-visualisations/network-graph/visualisation-data/visualisation-data.component.html
+++ b/src/app/view/pages/page-visualisations/network-graph/visualisation-data/visualisation-data.component.html
@@ -4,17 +4,35 @@
     (selectedIndexChange)="onTabChange($event)"
     mat-stretch-tabs="true"
     mat-align-tabs="start"
-  >
+  ><mat-tab label="Eingehende Verweise">
+      <div class="info-container">
+          <div *ngIf="!selectedCarrier">
+              <h3 class="info-message">
+                  <mat-icon class="info-icon">info</mat-icon>
+                  <span>Durch Klick auf einen Knoten in der Visualisierung lassen sich Textträger auswählen, um deren Eigenschaften und Verweise hier anzuzeigen</span></h3>
+          </div>
+          <app-incoming-verweise-list
+                  [infoCarrier]="selectedCarrier"
+                  [texts]="textsWithIncomingVerweise"
+                  (verweisSelected)="onIncomingVerweisClicked($event)"
+          />
+      </div>
+  </mat-tab>
+  <mat-tab label="Ausgehende Verweise">
+      <div class="info-container">
+          <div *ngIf="!selectedCarrier">
+              <h3 class="info-message">
+                  <mat-icon class="info-icon">info</mat-icon>
+                  <span>Durch Klick auf einen Knoten in der Visualisierung lassen sich Textträger auswählen, um deren Eigenschaften und Verweise hier anzuzeigen</span></h3>
+          </div>
+          <app-outgoing-verweise-per-manuscript
+                  [selectedCarrier]="selectedCarrier"
+          />
+      </div>
+  </mat-tab>
 
     <mat-tab label="Einstellungen und Filter">
       <app-vis-data-interaction class="vis-data-tab"></app-vis-data-interaction>
     </mat-tab>
-      <mat-tab label="Information">
-          <app-node-browser class="vis-data-tab"></app-node-browser>
-      </mat-tab>
-    <!--<mat-tab label="Auswertungen">
-      <div class="vis-data-tab"></div>
-    </mat-tab>
-    -->
   </mat-tab-group>
 </div>
