--- a/src/app/view/pages/page-visualisations/network-graph/visualisation-data/visualisation-data.component.scss
+++ b/src/app/view/pages/page-visualisations/network-graph/visualisation-data/visualisation-data.component.scss
@@ -3,7 +3,42 @@
   width: calc(60vw - 3 * var(--margin-small));
 }
 
+.info-container {
+  display: flex;
+  flex-direction: column;
+  height: 82vh;
+}
+
 .vis-data-tab {
-  height: 100%;
+  max-height: 82vh;
   width: 100%;
+}
+
+
+app-outgoing-verweise-per-manuscript, app-incoming-verweise-list {
+  flex: 1;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.info-message {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.info-icon {
+  margin-right: 0.5em;
+}
+
+.info-icon {
+  font-size: 1.5em;
+  align-self: baseline;
+}
+
+.info-icon.mat-icon {
+  overflow: visible;
+  line-height: 1;
 }
