--- a/src/app/view/shared/verweis-link-icon-component/verweis-link-icon-component.component.scss
+++ b/src/app/view/shared/verweis-link-icon-component/verweis-link-icon-component.component.scss
@@ -17,3 +17,13 @@
   background-color: unset;
   justify-content: flex-end;
 }
+
+.icons-flicker .in-text-icon-button {
+  animation: iconPulse 400ms ease-out;
+}
+
+@keyframes iconPulse {
+  0%   { transform: scale(1);   filter: brightness(1); }
+  35%  { transform: scale(1.5); filter: brightness(1.5); }
+  100% { transform: scale(1);   filter: brightness(1); }
+}
